# fluid_simulator_embedded

./: .clang-format  CMakeLists.txt  README.md
apps/viewer/: main.cpp
include/fluid2d/: fluid2d.hpp
src/: fluid2d.cpp
